[project]
name = "pyinfra-testing"
version = "0.2.1"
description = "Generate Python unit tests from JSON and YAML files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "freezegun>=1.5.5,<2.0.0",
    "pyyaml>=6.0.3,<7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17,<0.16.0",
    "pyinfra>=3.9.0,<4.0.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pyinfra_testing"
module-root = ""
